// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontKerning renders 0 1`] = `
Array [
  .c0 {
  font-kerning: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders function 1`] = `
Array [
  .c0 {
  font-kerning: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders invalid theme path 1`] = `
Array [
  .c0 {
  font-kerning: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders negative number 1`] = `
Array [
  .c0 {
  font-kerning: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-kerning: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-kerning: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-kerning: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-kerning: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-kerning: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-kerning: July;
}

@media May {
  .c0 {
    font-kerning: August;
  }
}

@media April {
  .c0 {
    font-kerning: September;
  }
}

@media January {
  .c0 {
    font-kerning: November;
  }
}

@media April {
  .c0 {
    font-kerning: August;
  }
}

@media June {
  .c0 {
    font-kerning: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: July;
}

@media May {
  .c0 {
    font-kerning: August;
  }
}

@media April {
  .c0 {
    font-kerning: September;
  }
}

@media January {
  .c0 {
    font-kerning: November;
  }
}

@media April {
  .c0 {
    font-kerning: August;
  }
}

@media June {
  .c0 {
    font-kerning: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-kerning: November;
  }
}

@media April {
  .c0 {
    font-kerning: January;
  }
}

@media January {
  .c0 {
    font-kerning: December;
  }
}

@media April {
  .c0 {
    font-kerning: April;
  }
}

@media June {
  .c0 {
    font-kerning: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-kerning: November;
  }
}

@media April {
  .c0 {
    font-kerning: January;
  }
}

@media January {
  .c0 {
    font-kerning: December;
  }
}

@media April {
  .c0 {
    font-kerning: April;
  }
}

@media June {
  .c0 {
    font-kerning: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-kerning: July;
  }
}

@media April {
  .c0 {
    font-kerning: August;
  }
}

@media January {
  .c0 {
    font-kerning: September;
  }
}

@media April {
  .c0 {
    font-kerning: November;
  }
}

@media June {
  .c0 {
    font-kerning: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-kerning: July;
  }
}

@media April {
  .c0 {
    font-kerning: August;
  }
}

@media January {
  .c0 {
    font-kerning: September;
  }
}

@media April {
  .c0 {
    font-kerning: November;
  }
}

@media June {
  .c0 {
    font-kerning: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-kerning: January;
  }
}

@media April {
  .c0 {
    font-kerning: December;
  }
}

@media January {
  .c0 {
    font-kerning: April;
  }
}

@media April {
  .c0 {
    font-kerning: May;
  }
}

@media June {
  .c0 {
    font-kerning: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-kerning: January;
  }
}

@media April {
  .c0 {
    font-kerning: December;
  }
}

@media January {
  .c0 {
    font-kerning: April;
  }
}

@media April {
  .c0 {
    font-kerning: May;
  }
}

@media June {
  .c0 {
    font-kerning: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders postitive number 1`] = `
Array [
  .c0 {
  font-kerning: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders string 1`] = `
Array [
  .c0 {
  font-kerning: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontKerning renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontKerning renders valid theme path 1`] = `
Array [
  .c0 {
  font-kerning: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-kerning: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
